--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
+    "mongoose-unique-validator": "^5.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
